--- a/periphery/package.json
+++ b/periphery/package.json
@@ -9,12 +9,14 @@
   },
   "devDependencies": {
     "@types/dockerode": "^3.3.3",
+    "@types/fs-extra": "^9.0.13",
     "@types/node": "^17.0.21",
     "typescript": "^4.6.2"
   },
   "dependencies": {
     "@feathersjs/express": "^4.5.12",
     "@feathersjs/feathers": "^4.5.12",
-    "dockerode": "^3.3.1"
+    "dockerode": "^3.3.1",
+    "fs-extra": "^10.0.1"
   }
 }
